# fastapi-template

./: .env.example  README.md  cookiecutter.json  pyproject.toml  setup.cfg
app/: main.py
app/database/: db.py
app/middleware/: router_logging.py  sql.py
app/settings/: config.py  logging.py
app/utils/: logger.py
hooks/: post_gen_project.py
tasks/: __init__.py  common.py  env.py
{{cookiecutter.project_name}}/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
{{cookiecutter.project_name}}/app/: main.py
{{cookiecutter.project_name}}/app/middleware/: router_logging.py  sql.py
{{cookiecutter.project_name}}/app/routers/: root_router.py
{{cookiecutter.project_name}}/app/routers/health/: route.py
{{cookiecutter.project_name}}/app/settings/: config.py  logging.py
{{cookiecutter.project_name}}/tasks/: secure.py  style.py  test.py
